# pyproject.toml
[project]
name = "comfyui-weightedrandomchoice" # Unique identifier for your node. Immutable after creation.
description = "A node for ComfyUI that picks from `input_a` and `input_b` based on the given `chance`."
version = "0.0.1" # Custom Node version. Must be semantically versioned.
license = { file = "LICENSE.txt" }
dependencies  = [] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/SparknightLLC/ComfyUI-WeightedRandomChoice"

[tool.comfy]
PublisherId = "sparknight" # TODO (fill in Publisher ID from Comfy Registry Website).
DisplayName = "ComfyUI-WeightedRandomChoice" # Display name for the Custom Node. Can be changed later.
Icon = "https://example.com/icon.png" # SVG, PNG, JPG or GIF (MAX. 800x400px)